--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,9 +14,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.2",
         "express": "^4.18.2",
         "fs": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.0",
         "nodemon": "^2.0.20",
-        "socket.io": "^4.6.1"
+        "socket.io": "^4.6.1",
+        "uuid": "^9.0.0"
     }
 }
