--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "back-end",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "nodemonConfig": {
-        "ignore": "*.json"
-    },
-    "scripts": {
-        "start": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^5.1.0",
-        "body-parser": "^1.20.2",
-        "express": "^4.18.2",
-        "fs": "^0.0.1-security",
-        "jsonwebtoken": "^9.0.0",
-        "nodemon": "^2.0.20",
-        "socket.io": "^4.6.1",
-        "uuid": "^9.0.0"
-    }
+	"name": "back-end",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"nodemonConfig": {
+		"ignore": "*.json"
+	},
+	"scripts": {
+		"start": "nodemon index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"type": "module",
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"body-parser": "^1.20.2",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.0",
+		"nodemon": "^2.0.20",
+		"socket.io": "^4.6.1",
+		"uuid": "^9.0.0"
+	}
 }
